# openfang

./: .env.example  .gitignore  CHANGELOG.md  Cargo.toml
crates/openfang-api/: Cargo.toml
crates/openfang-api/src/: session_auth.rs
crates/openfang-channels/src/: feishu.rs
crates/openfang-kernel/: Cargo.toml
crates/openfang-kernel/src/: kernel.rs  whatsapp_gateway.rs
crates/openfang-runtime/src/: model_catalog.rs
crates/openfang-runtime/src/drivers/: claude_code.rs  gemini.rs  openai.rs
crates/openfang-types/src/: config.rs
docs/: configuration.md  providers.md  troubleshooting.md
docs/scripts/: install.sh
